# colloc

./: CMakeLists.txt  README.md  colloc.hpp  compare.hpp  convert.pl  example.txt  grams.capnp  grams.capnp.c++  grams.capnp.h  grams.proto  kmerge.hpp  streamer.hpp  tools.hpp
src/: colloc.cpp  extract.cpp  gramcat.cpp  read_total.cpp  tests.cpp  tools.cpp
